src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Date_of_Most_Recent_Activity__c</fullName>
        <description>Formula showing the Date of Most Recent Event or Date of Most Recent Task that is closest to today</description>
        <formula>IF( ISBLANK(Date_of_Most_Recent_Event__c) &amp;&amp; ISBLANK(Date_of_Most_Recent_Task__c),
   NULL,

/*ELSE*/
   TODAY() -
      MIN(
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Event__c,365242199), /* 1-million years is placeholder if date is blank so that MIN function... */
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Task__c,365242199) /* ... can still calculate the minimum of the populated date fields */
      )
)</formula>
        <inlineHelpText>Formula showing the Date of Most Recent Event or Date of Most Recent Task that is closest to today</inlineHelpText>
        <label>Date of Most Recent Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Event__c</fullName>
        <description>Rollup showing the Max date (before today) of event records related to this record. This field is populated by the &quot;Con Date of Most Recent Event&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Max date (before today) of event records related to this record</inlineHelpText>
        <label>Date of Most Recent Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Task__c</fullName>
        <description>Rollup showing the Max date (before today) of task records related to this record. This field is populated by the &quot;Con Date of Most Recent Task&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Max date (before today) of task records related to this record</inlineHelpText>
        <label>Date of Most Recent Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Activity__c</fullName>
        <description>Formula showing the Date of Next Event or Date of Next Task that is closest to today</description>
        <formula>IF( ISBLANK(Date_of_Next_Event__c) &amp;&amp; ISBLANK(Date_of_Next_Task__c),
   NULL,

/*ELSE*/
   TODAY() +
      MIN(
         BLANKVALUE(Date_of_Next_Event__c - TODAY(),365242199), /* 1-million years is placeholder if date is blank so that MIN function... */
         BLANKVALUE(Date_of_Next_Task__c - TODAY(),365242199) /* ... can still calculate the minimum of the populated date fields */
      )
)</formula>
        <inlineHelpText>Formula showing the Date of Next Event or Date of Next Task that is closest to today</inlineHelpText>
        <label>Date of Next Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Event__c</fullName>
        <description>Rollup showing the Min date (after today) of event records related to this record. This field is populated by the &quot;Con Date of Next Event&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Min date (after today) of event records related to this record</inlineHelpText>
        <label>Date of Next Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Task__c</fullName>
        <description>Rollup showing the Min date (after today) of task records related to this record. This field is populated by the &quot;Con Date of Next Task&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Min date (after today) of task records related to this record</inlineHelpText>
        <label>Date of Next Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do NOT solicit through the mail services.</description>
        <inlineHelpText>Do NOT solicit through the mail services.</inlineHelpText>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do NOT solicit at the door.</description>
        <inlineHelpText>Do NOT solicit at the door.</inlineHelpText>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do NOT solicit through text messaging.</description>
        <inlineHelpText>Do NOT solicit through text messaging.</inlineHelpText>
        <label>Do Not Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <description>The Facebook profile for this person</description>
        <inlineHelpText>The Facebook profile for this person</inlineHelpText>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>First_Name_Email_Mail__c</fullName>
        <description>Title Case First Name for Email and Mail Salutations</description>
        <formula>LEFT(First_Name_Standard__c , 1) + LOWER(RIGHT(First_Name_Standard__c , LEN(First_Name_Standard__c )-1))</formula>
        <inlineHelpText>Title Case First Name for Email and Mail Salutations</inlineHelpText>
        <label>First Name - Email/Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Standard__c</fullName>
        <description>Standardized First Name</description>
        <formula>IF(FIND(&quot; &quot;,FirstName)&gt;0,UPPER( LEFT(FirstName,FIND(&quot; &quot;,FirstName))),UPPER(FirstName))</formula>
        <inlineHelpText>Standardized First Name</inlineHelpText>
        <label>First Name - Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do NOT solicit by any fashion.</description>
        <inlineHelpText>Do NOT solicit by any fashion.</inlineHelpText>
        <label>Global Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_Standard__c</fullName>
        <description>Standardized Last Name</description>
        <formula>IF(FIND(&quot; &quot;,LastName)&gt;0,UPPER( RIGHT(LastName,LEN(LastName)-FIND(&quot; &quot;,LastName))),UPPER(LastName))</formula>
        <inlineHelpText>Standardized Last Name</inlineHelpText>
        <label>Last Name - Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>The LinkedIn profile for this person</description>
        <inlineHelpText>The LinkedIn profile for this person</inlineHelpText>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>What is the customer&apos;s occupation?</description>
        <inlineHelpText>What is the customer&apos;s occupation?</inlineHelpText>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phonetic_Pronunciation__c</fullName>
        <description>How is this contact&apos;s name pronounced?</description>
        <inlineHelpText>How is this contact&apos;s name pronounced?</inlineHelpText>
        <label>Phonetic/Pronunciation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_Update_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Email Address on this contact needs to be updated on next customer contact.</description>
        <inlineHelpText>The Email Address on this contact needs to be updated on next customer contact.</inlineHelpText>
        <label>Please Update Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Political_Affiliation__c</fullName>
        <description>The Political Affiliation of this contact</description>
        <inlineHelpText>The Political Affiliation of this contact</inlineHelpText>
        <label>Political Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Democratic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libertarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republican</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <description>What is this contact&apos;s primary contact number?</description>
        <inlineHelpText>What is this contact&apos;s primary contact number?</inlineHelpText>
        <label>Primary Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QAS_Mailing_Address_County__c</fullName>
        <description>QAS Mailing Address County</description>
        <inlineHelpText>QAS Mailing Address County</inlineHelpText>
        <label>QAS Mailing Address County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Other_Address_County__c</fullName>
        <description>QAS Other Address County</description>
        <inlineHelpText>QAS Other Address County</inlineHelpText>
        <label>QAS Other Address County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Heat index for Community Program Contacts - the likelihood that this contact will lead to a Community Program</description>
        <inlineHelpText>Heat index for Community Program Contacts - the likelihood that this contact will lead to a Community Program</inlineHelpText>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Super Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>What Name Should Be Included in Mailing Salutations &quot;Dear ....&quot;</description>
        <inlineHelpText>What Name Should Be Included in Mailing Salutations &quot;Dear ....&quot;</inlineHelpText>
        <label>Email/Mail Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sighten_Contact_uuid__c</fullName>
        <description>Contains the uuid for the contact in the Sighten system</description>
        <externalId>true</externalId>
        <inlineHelpText>Contains the uuid for the contact in the Sighten system</inlineHelpText>
        <label>Sighten Contact uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Suffix on Contact Name</description>
        <inlineHelpText>Suffix on Contact Name</inlineHelpText>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <description>The Twitter profile for this person</description>
        <inlineHelpText>The Twitter profile for this person</inlineHelpText>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ValidationStatus_MailingAddress__c</fullName>
        <label>QAS Validation Status Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationStatus_OtherAddress__c</fullName>
        <label>QAS Validation Status Other Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationTimestamp_MailingAddress__c</fullName>
        <label>QAS Mailing Address Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValidationTimestamp_OtherAddress__c</fullName>
        <label>QAS Other Address Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items_C</relationshipLabel>
        <relationshipName>Contact_Score_Items_C</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Contact.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>rstk__AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>rstk__BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>rstk__MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Rating__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>rstk__NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>